权限说明补充、分发实体字段丢失、

--- a/modules/server/src/main/resources/vm/node/list.vm
+++ b/modules/server/src/main/resources/vm/node/list.vm
@@ -88,12 +88,13 @@
                     time: 100000000
                 });
                 top.location.href = $(this).attr("url");
-                return;
+                return false;
             }
             if ("edit" == op) {
                 editProject($(this).attr("id"));
-                return;
+                return false;
             }
+            return false;
         });
 
         #foreach($item in $array)
