--- a/modules/server/src/main/resources/vm/node/system/whitelistDirectory.vm
+++ b/modules/server/src/main/resources/vm/node/system/whitelistDirectory.vm
@@ -5,22 +5,27 @@
     #parse("./common/head.vm")
     <title>白名单目录</title>
     <style>
-        .div {
-            margin-top: 20px;
+        body {
+            padding: 10px;
         }
 
         .auto {
             width: 100%;
             height: 100%;
         }
+
+        .edit-div {
+            width: 80%;
+            height: 25vh;
+        }
     </style>
 </head>
 
 <body>
-<div class="layui-container div">
+<div class="layui-container">
     <form action="" class="layui-form" id="form_user">
         <div class="layui-form-item">
-            <div class="layui-inline" style="width: 80%;height:30vh;">
+            <div class="layui-inline edit-div">
                 <label class="layui-form-label">项目路径</label>
                 <div class="layui-input-block auto">
                     <textarea name="project" placeholder="请输入项目存放路径白名单，回车支持输入多个路径，系统会自动过滤 ../ 路径、不允许输入根路径"
@@ -29,7 +34,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <div class="layui-inline" style="width: 80%;height:30vh;">
+            <div class="layui-inline edit-div">
                 <label class="layui-form-label">证书路径</label>
                 <div class="layui-input-block auto">
                     <textarea name="certificate" placeholder="请输入证书存放路径白名单，回车支持输入多个路径，系统会自动过滤 ../ 路径、不允许输入根路径"
@@ -38,7 +43,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <div class="layui-inline" style="width: 80%;height:30vh;">
+            <div class="layui-inline edit-div">
                 <label class="layui-form-label">nginx目录</label>
                 <div class="layui-input-block auto">
                     <textarea name="nginx" placeholder="请输入nginx存放路径白名单，回车支持输入多个路径，系统会自动过滤 ../ 路径、不允许输入根路径"
