--- a/modules/server/src/main/resources/vm/node/script/edit.vm
+++ b/modules/server/src/main/resources/vm/node/script/edit.vm
@@ -36,11 +36,13 @@
                           class="layui-textarea auto">$!item.context</textarea>
             </div>
         </div>
-        <div class="layui-form-item">
-            <div class="layui-input-block">
-                <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+        #if($user.isSystemUser())
+            <div class="layui-form-item">
+                <div class="layui-input-block">
+                    <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+                </div>
             </div>
-        </div>
+        #end
     </form>
 </div>
 </body>
