删除脚本模板

--- a/modules/server/src/main/resources/vm/node/script/edit.vm
+++ b/modules/server/src/main/resources/vm/node/script/edit.vm
@@ -40,6 +40,10 @@
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+
+                    #if($item)
+                        <a class="layui-btn layui-btn-warm" data-id="$item.id" id="delete">删除</a>
+                    #end
                 </div>
             </div>
         #end
@@ -63,6 +67,36 @@
             });
             return false;
         });
+
+        $("#delete").click(function () {
+            var id = $(this).attr("data-id");
+            var type = $(this).attr("type");
+            var msg = '确定删除此脚本模板吗 ' + id + '？';
+            layer.confirm(msg, {
+                title: '系统提示'
+            }, function (index) {
+                loadingAjax({
+                    url: './del.json',
+                    data: {
+                        id: id
+                    },
+                    success: function (data) {
+                        layer.msg(data.msg);
+                        if (200 == data.code) {
+                            autoClose();
+                        }
+                    }
+                });
+            });
+        });
+    }
+
+    function autoClose() {
+        setTimeout(function () {
+            var index = parent.layer.getFrameIndex(window.name);
+            parent.layer.close(index);
+            parent.location.reload();
+        }, 2000);
     }
 </script>
 
