--- a/modules/server/src/main/resources/vm/node/welcome.vm
+++ b/modules/server/src/main/resources/vm/node/welcome.vm
@@ -51,7 +51,7 @@
             width: 100%;
         }
     </style>
-    <script src="//echarts.baidu.com/dist/echarts.js?v=$staticCacheTime"></script>
+    <script src="$!jpomProxyPath/static/js/echarts.min.js?v=$staticCacheTime"></script>
 </head>
 <body>
 <form action="" class="layui-form" id="form">
